Adding more notes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <h3>Learning JS</h3>
 
-    <script type="text/javascript" src="debug.js"></script>
+    <!-- <script type="text/javascript" src="debug.js"></script> -->
+    <!-- <script type="text/javascript" src="NamasteJS/Promise_Examples.js"></script> -->
+    <script type="text/javascript" src="NamasteJS/EP_21_Map_Filter_Reduce.js"></script>
 </body>
 </html>
