Adding array methods

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- <script type="text/javascript" src="debug.js"></script> -->
     <!-- <script type="text/javascript" src="NamasteJS/Promise_Examples.js"></script> -->
-    <script type="text/javascript" src="NamasteJS/EP_21_Map_Filter_Reduce.js"></script>
+    <!-- <script type="text/javascript" src="NamasteJS/EP_21_Map_Filter_Reduce.js"></script> -->
+    <script type="text/javascript" src="NamasteJS/Array_Methods.js" ></script>
 </body>
 </html>
